--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -3,20 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
-            background-color: black;
+            height: 100vh;
+            /*background-color: black;
             background-image: url(imagens/wallpaper002.jpg);
-            background-position: center top;
+            background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed;*/
+
+            /*Shorthand - background
+                color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url(imagens/wallpaper002.jpg) center center no-repeat fixed;
             background-size: cover;
 
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
@@ -27,7 +36,7 @@
 <body>
     <main>
         <h1>Teste de Imagem de Fundo</h1>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam voluptate, assumenda qui ducimus itaque impedit minima, officiis repellat nulla voluptatum nam ipsa reiciendis mollitia. Quos architecto repudiandae asperiores repellendus deserunt? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dolore molestias nisi dolorum libero eius! Esse illum sint laborum enim sunt quia, ut eligendi illo eaque consequuntur neque delectus porro est? Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis perspiciatis ex ipsum reprehenderit dignissimos inventore reiciendis voluptas aliquam libero quos, totam nostrum facilis a quia facere labore iusto, est quae.</p>
     </main>
 </body>
 </html>
